# config

./: .gitignore  BUILD.bazel  WORKSPACE
.github/: pull.yml
test/: BUILD.bazel
