load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "config_internal",
    hdrs = glob(["include/boost/**/*.hpp"], exclude = ["include/boost/*.hpp"]),
)

cc_library(
    name = "config",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/*.hpp"]),
    deps = [":config_internal"],
)
